# Shahajjo-project

./: .gitignore  README.md  package-lock.json  package.json
infra/docker/: docker-compose.dev.yml
scripts/: analyze_csv.py  process_transactions_csv.py  scenarios.csv  test_anomalies.py  transactions.csv  transactions_output.json
server/3-analytics-engine/: Dockerfile  pyproject.toml  requirements.txt
server/3-analytics-engine/app/: main.py
server/3-analytics-engine/app/api/: routes.py
server/3-analytics-engine/app/core/: config.py
server/3-analytics-engine/app/db/: session.py
server/3-analytics-engine/app/events/: event_handlers.py  redis_subscriber.py
server/3-analytics-engine/app/models/: schemas.py
server/3-analytics-engine/app/services/: data_quality.py  engine.py
server/3-analytics-engine/app/services/anomaly_detector/: cv_amount_clustering.py  detector.py  isolation_forest.py  zscore_velocity.py
server/3-analytics-engine/app/services/evidence_generator/: confidence_scoring.py  generator.py  shap_explainer.py
server/3-analytics-engine/app/services/liquidity_forecaster/: burn_rate.py  exponential_smoothing.py  forecaster.py
server/3-analytics-engine/app/utils/: time_series_helpers.py
server/3-analytics-engine/notebooks/: model_training.ipynb
server/3-analytics-engine/tests/: evaluate_model.py  generate_synthetic_data.py  shap_spike.py  synthetic_validation.py  test_anomaly_detector.py  test_evidence_generator.py  test_liquidity_forecaster.py
server/3-analytics-engine/tests/data/: synthetic_validation_set.csv  validation_report.md
(+172 files in other folders)
