[tool.poetry]
name = "analytics-engine"
version = "1.0.0"
description = "Analytics Engine for multi-provider liquidity and anomaly detection"
authors = ["Codex Hackathon Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = "*"
pydantic = "*"
pydantic-settings = "*"
numpy = "*"
pandas = "*"
openai = "*"
python-dotenv = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
